# py32

./: .gitignore  README.md
.copilot/: skills
KnowledgeBase/AWTK/: README.md  api_index.json  kb_search.py  search_index.json
projects/PY32F002B全自动正反转/: readme.txt
projects/PY32F002B指路方案验证板/: readme.txt
projects/stm32rtos - 简单磨刀器/: Project.uvguix.PC  Project.uvoptx  arm-none-eabi.toolchain.cmake  build_and_flash.ps1  install_openai_python.ps1
projects/stm32rtos 网上电机带编码/: CMakeLists.txt  Project.uvguix.PC  Project.uvoptx  Project.uvprojx  项目文档.md
projects/stm32rtos 网上电机带编码/Objects/: Project.build_log.htm  Project.htm  Project.lnp  as5600.crf  croutine.crf  event_groups.crf  heap_4.crf  list.crf  main.crf  photoelectric.crf  tasks.crf  timers.crf  usart.crf  worklog_dump.crf
projects/stm32rtos 网上电机带编码/User/: main.c
projects/stm32rtos 网上电机带编码/freertos/: FreeRTOSConfig.h
projects/stm32rtos 网上电机带编码/hardwork/: X_V2.h  as5600.c  photoelectric.c  usart.c  usart.h  worklog.c  worklog.h  worklog_dump.c
projects/stm32rtos 网上电机带编码/system/: Delay.c
skills/architect/: SKILL.md  SKILL_CN.md
skills/article-extractor/: SKILL.md  SKILL_CN.md
skills/awtk-dev/: SKILL.md
skills/bootloader-ota/: SKILL.md  SKILL_CN.md
skills/changelog-generator/: SKILL_CN.md
skills/code-review-skill/: SKILL_CN.md
skills/coder/: README.md  SKILL.md  SKILL_CN.md
skills/coding-agent/: SKILL_CN.md
skills/dry-refactoring/: SKILL.md
skills/explorer/: README.md  SKILL.md  SKILL_CN.md
skills/frontend-design/: SKILL_CN.md
skills/gen_readme/: SKILL.md
skills/plan/: README.md  (+2 more)
(+972 files in other folders)
